src/objects/Manifest_Item__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manifest_Item_Name__c</fullName>
        <label>Manifest Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Story</label>
        <referenceTo>Story__c</referenceTo>
        <relationshipLabel>Manifest Items</relationshipLabel>
        <relationshipName>Manifest_Items_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Manifest Items</relationshipLabel>
        <relationshipName>Manifest_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action Link Group Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Sharing Reason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auth. Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto-Response Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Button or Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORS Whitelist Origin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Channel Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compact Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Security Policy Trusted Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Feed Filter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Metadata Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Permission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Report Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Setting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Rule</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Manifest Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MI-{000000}</displayFormat>
        <label>Manifest Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manifest Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>